# banko-ai-assistant-rag-demo

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  app.py  bedrock_search.py  build-and-push.sh  cache_manager.py  config.example.py  config.py  demo_token_optimization.py  docker-compose.agents.yml  docker-compose.simple.yml  docker-compose.standalone.yml  docker-compose.yml  docker-entrypoint.sh  langchain.py  openai_search.py  pyproject.toml  readme.md  requirements.txt  run-app.py  start-banko-watsonx.sh  start-banko.sh  start-database.sh  start_demo_mode.sh  start_production_mode.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
AWS Bedrock/: aws_bedrock.py
banko_ai/: __init__.py  __main__.py  cli.py
banko_ai/agents/: __init__.py  base_agent.py  budget_agent.py  fraud_agent.py  llm_factory.py  orchestrator_agent.py  receipt_agent.py  receipt_workflow.py
banko_ai/agents/tools/: __init__.py  analysis_tools.py  document_tools.py  search_tools.py
banko_ai/ai_providers/: __init__.py  aws_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py  watsonx_provider.py  watsonx_provider.py.backup
banko_ai/config/: settings.py
banko_ai/templates/: agent_dashboard.html  dashboard.html  data_generator.html  index.html
banko_ai/utils/: agent_schema.py  cache_manager.py  crdb_chat_history.py  crdb_engine.py  database.py  db_retry.py  intent_classifier.py  migration.py
banko_ai/vector_search/: crdb_vectorstore.py  enrichment.py  generator.py  search.py
banko_ai/web/: agent_dashboard.py  app.py  auth.py
docs/: AGENTIC_AI_PLAN.md  AGENTS_SUMMARY.md  API.md  CACHE_DEMO_GUIDE.md  DEMO_GUIDE.md  DEMO_QUERIES.md  DEMO_QUICK_START.md  DOCKER.md  REINVENT_COMPLETE_GUIDE.md  REINVENT_DEMO_SCRIPT.md  TOKEN_OPTIMIZATION_REPORT.md  VECTOR_INDEX_DEMO_GUIDE.md  VECTOR_SEARCH_DEMO.md  WOW_FACTOR_STATUS.md
scripts/: build-docker.sh  cache_statistics.sql  check_dashboard.py  demo_standalone_search.py  demo_wow_factor.py  merge_dependabot_prs.sh  restart_dashboard.sh  security_audit.py  setup_system_deps.sh  start_agent_dashboard.sh  start_demo.sh  test-vector-search.sql  watch-queries.sh
templates/: dashboard.html  index.html
tests/: test_agent_framework.py  test_all_agents.py  test_all_providers.py  test_cache_after_cleanup.py  test_cache_threshold.py  test_connection_pooling.py  test_dashboard.py  test_env_config.py  test_full_system.py  test_intent_classifier.py  test_navigation.py  test_orchestrator.py  test_receipt_agent.py  test_receipt_upload.py  test_response_cache_fix.py  test_vector_index.py  test_vector_search_cache_all_providers.py
vector_search/: dynamic_expenses.py  insert_data.py  search.py
watsonx/: README.md  __init__.py  demo_watsonx.py  test_connection.py  transaction_categorizer.py  watsonx.py
