[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "banko-ai-assistant"
version = "1.0.35"
description = "AI-powered expense analysis and RAG system with CockroachDB vector search and multi-provider AI support (OpenAI, AWS Bedrock, IBM Watsonx, Google Gemini)"
authors = [
    { name="Virag Tripathi", email="virag.tripathi@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = ["ai", "rag", "vector-search", "cockroachdb", "expense-analysis", "financial-ai", "agentic-ai", "multi-agent"]
dependencies = [
    # Web Framework
    "flask>=3.0.0,<4.0.0",
    "werkzeug>=3.0.0,<4.0.0",
    "jinja2>=3.1.0,<4.0.0",
    
    # Database
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "sqlalchemy-cockroachdb>=2.0.0,<3.0.0",
    
    # AI & Embeddings
    "sentence-transformers>=3.1.0,<4.0.0",
    "openai>=1.11.0,<2.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    
    # AWS Integration
    "boto3>=1.40.0,<1.41.0",
    "botocore>=1.40.0,<1.41.0",
    
    # Google Integration
    "google-cloud-aiplatform>=1.38.0,<2.0.0",
    "google-auth>=2.23.0,<3.0.0",
    "vertexai>=1.43.0,<2.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    
    # Agent Framework (NEW)
    "langgraph>=0.2.0,<0.3.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-aws>=0.2.0,<0.3.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-community>=0.3.0,<0.4.0",
    
    # Document Processing (NEW)
    "pytesseract>=0.3.10,<0.4.0",
    "pdf2image>=1.16.3,<2.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    
    # Real-time Communication (NEW)
    "python-socketio>=5.10.0,<6.0.0",
    "flask-socketio>=5.3.5,<6.0.0",
    "eventlet>=0.33.0,<1.0.0",
    
    # Production Server
    "gunicorn>=21.2.0,<22.0.0",
    
    # Object Storage (NEW)
    "minio>=7.2.0,<8.0.0",
    
    # Utilities
    "requests>=2.32.4,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "faker>=24.0.0,<25.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2024.0,<2025.0",
    "tqdm>=4.66.3,<5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
banko-ai = "banko_ai.cli:main"

[project.urls]
Homepage = "https://github.com/cockroachlabs-field/banko-ai-assistant-rag-demo"
Repository = "https://github.com/cockroachlabs-field/banko-ai-assistant-rag-demo"
Documentation = "https://github.com/cockroachlabs-field/banko-ai-assistant-rag-demo#readme"
"Bug Tracker" = "https://github.com/cockroachlabs-field/banko-ai-assistant-rag-demo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["banko_ai*"]

[tool.setuptools.package-data]
banko_ai = ["templates/*", "static/*", "static/**/*", "*.html", "*.css", "*.js"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
