[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "banko-ai-assistant"
version = "1.0.36"
description = "Agentic AI banking assistant with LangGraph multi-agent workflows, CockroachDB vector search (langchain-cockroachdb), durable checkpointing, receipt OCR, fraud detection, and multi-provider support (OpenAI, AWS Bedrock, IBM watsonx, Google Gemini)"
authors = [
    { name="Virag Tripathi", email="virag.tripathi@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = ["agentic-ai", "langgraph", "multi-agent", "rag", "vector-search", "cockroachdb", "langchain-cockroachdb", "receipt-ocr", "fraud-detection", "financial-ai"]
dependencies = [
    # Web Framework (CVE-2026-27205, CVE-2026-27199, CVE-2026-21860)
    "flask>=3.1.3,<4.0.0",
    "werkzeug>=3.1.6,<4.0.0",
    "jinja2>=3.1.6,<4.0.0",
    
    # Database
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "sqlalchemy-cockroachdb>=2.0.0,<3.0.0",
    
    # AI & Embeddings
    "sentence-transformers>=3.1.0,<6.0.0",
    "openai>=1.11.0",
    
    # AWS Integration
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    
    # Google Integration
    "google-cloud-aiplatform>=1.133.0,<2.0.0",
    "google-auth>=2.23.0,<3.0.0",
    "vertexai>=1.43.0,<2.0.0",
    "google-genai>=1.0.0",
    
    # CockroachDB LangChain Integration (vectorstore, chat history, checkpointer)
    "langchain-cockroachdb>=0.2.1",
    
    # Agent Framework / LangGraph (1.x ecosystem, langchain-core>=1.2.11 for CVE fix)
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.0.0",
    "langchain-aws>=1.0.0",
    "langchain-ibm>=1.0.0",
    "langchain-google-genai>=4.0.0",
    "langchain-community>=0.4.0",
    
    # Document Processing (NEW)
    "pytesseract>=0.3.10,<0.4.0",
    "pdf2image>=1.16.3,<2.0.0",
    "Pillow>=12.1.1",
    "pypdf>=6.9.2",
    
    # Real-time Communication (NEW)
    "python-socketio>=5.10.0,<6.0.0",
    "flask-socketio>=5.3.5,<6.0.0",
    "eventlet>=0.33.0,<1.0.0",
    
    # Production Server (Updated for CVE-2024-1135 and CVE-2024-6827 fixes)
    "gunicorn>=23.0.0,<24.0.0",
    
    # Utilities (CVE-2025-66418, CVE-2025-66471, CVE-2026-21441)
    "urllib3>=2.6.3",
    "requests>=2.33.0,<3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0,<3.0.0",
    "python-dateutil>=2.8.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0"
]

[project.scripts]
banko-ai = "banko_ai.cli:main"

[project.urls]
Homepage = "https://github.com/cockroachlabs-field/banko-ai-assistant"
Repository = "https://github.com/cockroachlabs-field/banko-ai-assistant"
Documentation = "https://github.com/cockroachlabs-field/banko-ai-assistant#readme"
"Bug Tracker" = "https://github.com/cockroachlabs-field/banko-ai-assistant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["banko_ai*"]

[tool.setuptools.package-data]
banko_ai = ["templates/*", "static/*", "static/**/*", "*.html", "*.css", "*.js"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E402", "F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
